Fix invisible nav on small devices

--- a/navbar.css
+++ b/navbar.css
@@ -13,6 +13,12 @@ nav {
     font-family: 'Raleway', 'Poppins', sans-serif;
     font-weight: bold;
     z-index: 1;
+    transform: translateX(-100%);
+    transition: 0.4s ease;
+}
+
+nav.visible {
+    transform: translateX(0);
 }
 
 .nav-white {
@@ -143,7 +149,7 @@ nav {
 
     .close-btn,
     .open-btn {
-        display: initial;
+        display: block;
         position: absolute;
         border: none;
         background: transparent;
@@ -161,13 +167,17 @@ nav {
 
     .open-btn {
         top: 0.5rem;
-        left: 0.5rem;
+        left: calc(100% + 0.5rem);
         background: #ffffff;
         box-shadow: 0 0 3px black;
         border: 2px solid rgba(0, 0, 0, 0.6);
         height: 2rem;
         width: 2rem;
         border-radius: 50%;
+    }
+
+    .open-btn.visible {
+        display: none;
     }
 
     .nav {
